# toy_mosaics

./: .gitignore  CLAUDE.md  clustering.py  clustering_strategies.html  constrained_leidenalg.py  copkmeans.py  coverage.py  dev_find_mosaic.ipynb  dev_find_violators.ipynb  figure_utils.py  generate_figures.py  generate_mrf_figures.py  generate_split_merge_figures.py  gmm.py  gmm_em.py  gmm_losses.py  leiden_mosaic_constraints.html  main.py  mrf_mosaic_constraints.html  plot.py  pyproject.toml  review_mrf_mosaic.html  simulate.py  simulate_mosaic.ipynb  spatial_losses.py  visualize_cf_pairwise.py  ward_mosaic_constraints.html
.claude/: settings.local.json
configs/: acs_train.yaml  anisotropic.yaml  anisotropic_missing.yaml  bcs_train.yaml  circles.yaml  elongated.yaml  elongated_clusters.yaml  elongated_missing.yaml  example.yaml  high_overlap.yaml  large_bounds.yaml  moons.yaml  rgcs_train.yaml  single.yaml  single_mosaic.yaml  varied.yaml
dataframes/: df_bcs_train_2026-06-01-17h.pickle
mrf_configs/: acs.yaml  bcs.yaml  bcs_k15.yaml  toy_default.yaml
tests/: test_clustering.py  test_dataset.py
toy_mosaics/: _result.py  clustering.py  coverage.py  dataset.py  leiden_mosaic.py  mosaic_merge.py  mrf_mosaic.py  overlap.py  plot.py  polygons.py  preprocess_dataset.py  simulate.py  simulate_dataset.py  ward_mosaic.py
toy_mosaics/plot/: __init__.py  blobs.py  coverage.py  mosaics.py  mrf_diagnostics.py
