[project]
name = "toy-mosaics"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "igraph>=1.0.0",
    "ipywidgets>=8.1.8",
    "leidenalg>=0.11.0",
    "matplotlib",
    "notebook",
    "scanpy>=1.11.5",
    "scikit-learn",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
]
